--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ dependencies {
     compile 'com.sun.faces:jsf-impl:2.2.9'
     compile 'jstl:jstl:1.2'
     compile 'org.hibernate:hibernate-core:4.3.6.Final'
+    compile 'org.primefaces:primefaces:5.3'
+    compile group: 'org.primefaces.extensions', name: 'all-themes', version: '1.0.8'
     compile group: 'com.h2database', name: 'h2', version: '1.4.191'
     compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
     compile group: 'javax.enterprise', name: 'cdi-api', version: '2.0-EDR2'
-    compile group: 'org.primefaces', name: 'primefaces', version: '6.0'
 }
 
