--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,8 +17,15 @@
       <servlet-name>FacesServlet</servlet-name>
       <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+
+    <!-- PRIMEFACES -->
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
     </context-param>
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+    </context-param>
+
 </web-app>
